# NOTES:
# 1. for display continuity sake please indent by 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
# 3. be concise but convey the change in a way that ordinary users understand
#<-------------------------------- 80 chars ---------------------------------->

2021-05-13 mmichaud
  * fix #17 OpenFileWizard with multiple files and options does not work

2021-02-15 to 2021-05-15 : migration from 1.16 (jts 1.14) to 2.0 (jts 1.18) and
    to github : large refactoring and cleanup

* release 1.16 Changes updated til here ****************************************

2020-12-23 ede
  * start scripts - remove obsolete "./conf/" classpath entry

2020-12-22 mmichaud
  * fix #517 : raster styling of float32 image

2020-12-21 ede
  * update finnish translation courtesy of Jukka Rahkonen
  * reorder app exit handlers, do not run if exit is cancelled

2020-12-20 mmichaud
  * replaced MergeSelectedPolygonsWithNeighbourPlugIn by
    MergePolygonsWithNeighbourPlugIn :faster, transactional, more options

2020-11-25 mmichaud
  * fix #516 modeler, z-interpolation was incorrect and transaction
    management was error-prone

2020-11-15 mmichaud
  * fix #512 about georeferencing (introduced by r6523)
  * fix #503 again (half-pixel shift)

2020-10-25 Giuseppe Aruta
  * Updated CadTool plugin to ver. 1.0: activated Add and remove area plugin
    from Kosmo to test complementary edition on polygons touching the edited
    one. Minor corrections of bugs on the block panel

2020-10-25 mmichaud
  * fix #508 : java2xml with setInteriorBorder/hasInteriorBorder property

2020-10-24 mmichaud
  * fix #382 : deleting warping vectors was not possible with incremental mode

2020-10-09 ede
  * PythonToolsPlugIn - find resourcefiles by classpath, which works in distro
    as well when multiple extension dirs are defined in devel environment

2020-10-08 ede
  * add support for gdal/spatialite via homebrew on macOS