@@ -4,6 +4,12 @@
 # 3. be concise but convey the change in a way that ordinary users understand
 #<-------------------------------- 80 chars ---------------------------------->
 
+2021-05-24 mmichaud
+  * Fix #23 about wms base url including parameters
+
+2021-05-23 mmichaud
+  * Fix #22 about 0.5 pixel shift problem
+
 2021-05-13 mmichaud
   * fix #17 OpenFileWizard with multiple files and options does not work
 
